==> Ru0110/EE344/Software/RP2040_code/ADE9000API_RP2040.c <==
#include "pico/stdlib.h"
#include "hardware/spi.h"
#include "ADE9000API_RP2040.h"
#include <stdio.h>

void SPI_Write_16(spi_inst_t *spi,
				const uint cs_pin,
                const uint16_t reg, 
                const uint16_t data) {
    
    uint16_t temp_address;
    temp_address = ((reg << 4) & 0xFFF0); // form message (set ~W and MB to 0)

    // Write to register
	gpio_put(cs_pin, 0);
    spi_write16_blocking(spi, &temp_address, 1);
	spi_write16_blocking(spi, &data, 1);
	gpio_put(cs_pin, 1);
}

void SPI_Write_32(spi_inst_t *spi,
				const uint cs_pin,
                const uint16_t reg, 
                const uint32_t data) {
    
    uint16_t temp_address;
	uint16_t data1, data2;

    temp_address = ((reg << 4) & 0xFFF0); // form message (set ~W and MB to 0)
    data1 = (data & 0xFFFF0000)>>16;
    data2 = (data & 0x0000FFFF);

    // Write to register
	gpio_put(cs_pin, 0);
    spi_write16_blocking(spi, &temp_address, 1);
	spi_write16_blocking(spi, &data1, 1);
	spi_write16_blocking(spi, &data2, 1);
	gpio_put(cs_pin, 1);
}

uint16_t SPI_Read_16(spi_inst_t *spi,
				const uint cs_pin,
                const uint16_t reg) {
    
    uint16_t temp_address;
    temp_address = (((reg << 4) & 0XFFF0) + 8);
	//printf("Address: %d\n", temp_address);
    uint16_t temp_packet;

    // Read from register
	gpio_put(cs_pin, 0);
    spi_write16_blocking(spi, &temp_address , 1); // 2 bytes are written
    spi_read16_blocking(spi, 0, &temp_packet, 1); // 2 bytes are read
	gpio_put(cs_pin, 1);

    return temp_packet;
}

uint32_t SPI_Read_32(spi_inst_t *spi,
				const uint cs_pin,
                const uint16_t reg) {
    
    uint16_t temp_address;
    temp_address = (((reg << 4) & 0XFFF0) + 8);
    uint16_t temp_highpacket;
    uint16_t temp_lowpacket;
    uint32_t temp_packet;

    // Read from register
	gpio_put(cs_pin, 0);
    spi_write16_blocking(spi, &temp_address, 1);
    spi_read16_blocking(spi, 0, &temp_highpacket, 1);
    spi_read16_blocking(spi, 0, &temp_lowpacket, 1);
	//spi_read16_blocking(spi, 0, &temp_packet, 2);
	gpio_put(cs_pin, 1);

    temp_packet = (temp_highpacket << 16) + temp_lowpacket;
    return temp_packet;
}

void SPI_Burst_Read_Resampled_Wfb(spi_inst_t *spi,
								const uint cs_pin, 
                                uint16_t Address, 
                                uint16_t Read_Element_Length, 
                                ResampledWfbData *ResampledData) {
    
    uint16_t i;
    uint16_t temp_address;
    temp_address = ((Address << 4) & 0xFFF0)+8;
	uint16_t readData[7];

	gpio_put(cs_pin, 0);

    spi_write16_blocking(spi, &temp_address, 1); // Send address to read from

    //burst read the data upto Read_Length 
	for(i=0;i<Read_Element_Length;i++) {
        //spi_read16_blocking(spi, 0, &(ResampledData->IA_Resampled[i]), 1);
        //spi_read16_blocking(spi, 0, &(ResampledData->VA_Resampled[i]), 1);
        //spi_read16_blocking(spi, 0, &(ResampledData->IB_Resampled[i]), 1);
        //spi_read16_blocking(spi, 0, &(ResampledData->VB_Resampled[i]), 1);
        //spi_read16_blocking(spi, 0, &(ResampledData->IC_Resampled[i]), 1);
        //spi_read16_blocking(spi, 0, &(ResampledData->VC_Resampled[i]), 1);
        //spi_read16_blocking(spi, 0, &(ResampledData->IN_Resampled[i]), 1);
		spi_read16_blocking(spi, 0, readData, 7);
		ResampledData->IA_Resampled[i] = (readData[0]);
		ResampledData->VA_Resampled[i] = (readData[1]);
		ResampledData->IB_Resampled[i] = (readData[2]);
		ResampledData->VB_Resampled[i] = (readData[3]);
		ResampledData->IC_Resampled[i] = (readData[4]);
		ResampledData->VC_Resampled[i] = (readData[5]);
		ResampledData->IN_Resampled[i] = (readData[6]);
	}

	gpio_put(cs_pin, 1);

}
